# hs-mapnik

./: .gitignore  .gitmodules  .travis.yml  README.md  Setup.hs  cabal.project  default.nix  hs-mapnik.cabal  stack-travis.yaml  stack.yaml  travis.nix
bindings/: .ghci  Setup.hs  default.nix  hs-mapnik-bindings.cabal
bindings/cbits/: destructors.cpp  hs_datasource.cpp  hs_datasource.hpp  hs_exception.cpp  hs_exception.hpp  hs_featureset.hpp  hs_proj_transform.hpp  parameter_util.hpp  symbolizer_util.hpp  util.hpp  value_util.hpp  wkt_instances.cpp
bindings/examples/: Json.hs
bindings/spec/: bad.xml  map.xml
bindings/spec/Mapnik/: BindingsSpec.hs
bindings/src/Mapnik/: Bindings.hs
bindings/src/Mapnik/Bindings/: Colorizer.hs  Cpp.hs  Datasource.hs  Expression.hs  Feature.hs  FromMapnik.hs  Geometry.hs  GroupProperties.hs  GroupSymProperties.hs  Image.hs  Layer.hs  Map.hs  Orphans.hs  Projection.hs  Raster.hs  Registry.hs  Render.hs  Rule.hs  Style.hs  Symbolizer.hs  SymbolizerValue.hs  TextPlacements.hs  TextSymProperties.hs  ToMapnik.hs  Transform.hs  Types.hs  Util.hs  Variant.hs
cbits/: CMakeLists.txt  destructors.cpp
cbits/cmake/: FindMapnik.cmake
examples/: Demo.hs
hs-mapnik/: hs-mapnik.cabal
hs-mapnik-bindings/: Setup.hs  cabal.project  default.nix  hs-mapnik-bindings.cabal
hs-mapnik-bindings/cbits/: destructors.cpp
hs-mapnik-bindings/spec/: map.xml
hs-mapnik-bindings/spec/Mapnik/: BindingsSpec.hs
hs-mapnik-bindings/src/Mapnik/: Bindings.hs
hs-mapnik-bindings/src/Mapnik/Bindings/: Color.hs  Datasource.hs  Expression.hs  FromMapnik.hs  Image.hs  Layer.hs  Map.hs  Orphans.hs  Projection.hs  Rule.hs  Style.hs  Symbolizer.hs  ToMapnik.hs  Transform.hs  Util.hs
hs-mapnik-bindings/src/Mapnik/Bindings/Symbolizer/: Property.hs
hs-mapnik-setup/src/Mapnik/: Setup.hs
hs-mapnik/spec/: MapnikSpec.hs
hs-mapnik/src/: Mapnik.hs
hs-mapnik/src/Mapnik/: Common.hs  Datasource.hs  Enums.hs  Expression.hs  Imports.hs  Layer.hs  Map.hs  Parameter.hs  Rule.hs  Style.hs  Symbolizer.hs  TH.hs  Util.hs
hs-mapnik/src/Mapnik/Symbolizer/: Lens.hs  Property.hs  TextProperties.hs
mapnik_c/: CMakeLists.txt  mapnik_c_api.cpp  mapnik_c_api.h
mapnik_c/cmake/: FindMapnik.cmake
nix/: travis.nix
nix/overlays/: haskellPackages.nix  systemPackages.nix  travis.nix
nix/pkgs/mapbox-geometry/: default.nix
nix/pkgs/mapbox-wagyu/: default.nix
nix/pkgs/mapnik/: default.nix  fix-overviews.patch
nix/pkgs/mapnik-vector-tile/: default.nix  make_shared_library.patch
nix/pkgs/protozero/: default.nix
pure/: .ghci  develop.sh  hs-mapnik.cabal
pure/spec/: MapnikSpec.hs  proj4s.txt
pure/src/: Mapnik.hs  Paths_hs_mapnik.hs
pure/src/Mapnik/: Color.hs  Common.hs  Datasource.hs  Enums.hs  ImageFilter.hs  Layer.hs  Lens.hs  Map.hs  Parameter.hs  QuickCheck.hs  Rule.hs  Style.hs  Symbolizer.hs  TH.hs  Util.hs
pure/src/Mapnik/Symbolizer/: Lens.hs  Property.hs
purs/: .gitignore  GeneratePS.hs  bower.json  cabal.project  hs-mapnik-purs.cabal
purs/app/: Main.hs
purs/src/Mapnik/: Purescript.hs
server/: LICENSE  hs-mapnik-server.cabal
server/src/Mapnik/: Server.hs
setup/: LICENSE  hs-mapnik-setup.cabal
setup/src/Mapnik/: Setup.hs
spec/: MapnikSpec.hs  map.xml
spec/Mapnik/: InternalSpec.hs
src/: Mapnik.hs
src/Mapnik/: Datasource.hs  Image.hs  Internal.chs  Internal.hs  InternalNew.hs  Layer.hs  Map.hs  Projection.hs
src/Mapnik/Internal/: Context.hs  Util.hs
swagger/: hs-mapnik-swagger.cabal
swagger/spec/Mapnik/: SwaggerSpec.hs
swagger/src/Mapnik/: Swagger.hs
vectortile/: Setup.hs  default.nix  hs-mapnik-vectortile.cabal
vectortile/cbits/: destructors.cpp  hs_vector_tile_datasource.hpp
vectortile/spec/: wkt.csv
vectortile/spec/Mapnik/Bindings/: VectorTileSpec.hs
vectortile/src/Mapnik/Bindings/: VectorTile.hs
vectortile/src/Mapnik/Bindings/VectorTile/: Datasource.hs  Lens.hs  Render.hs  Types.hs
