name:                hs-mapnik
version:             0.1.0.0
synopsis:            Haskel bindings for Mapnik
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2016 Alberto Valverde González
category:            Bindings
build-type:          Custom
extra-source-files:  cbits/mapnik_c_api.h
cabal-version:       >=1.10

flag internal-mapnik_c
  description: Let cabal build  mapnik_c
  default: True
  manual: True

flag examples
  description: Build example apps
  default: False
  manual: True

flag embed-fonts
  description: Embed defaults fonts in executable
  default: False
  manual: True

flag static
  description: Link executables statically
  default: False
  manual: True

library
  build-tools:         c2hs >= 0.25
  hs-source-dirs:      src
  exposed-modules:     Mapnik
                     , Mapnik.Internal
  build-depends:       base         >= 4.7 && < 5
                     , bytestring
                     , either
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(internal-mapnik_c)
    extra-libraries: stdc++
    include-dirs: mapnik_c
    c-sources: mapnik_c/mapnik_c_api.cpp
  else
    extra-libraries: mapnik_c mapnik

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec
                  , hspec-core >= 1.13
                  , hs-mapnik
                  , bytestring
                  , transformers

  hs-source-dirs:   spec
  main-is:          Spec.hs
  other-modules:    Mapnik.InternalSpec
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N
  if flag(static)
     ghc-options: -optl-static-libstdc++ -optl-static-libgcc -optl-static -optl-Wl,--allow-multiple-definition


source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
