name:                hs-mapnik
version:             0.1.0.0
synopsis:            Haskel bindings for Mapnik
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2016 Alberto Valverde González
category:            Bindings
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal, directory, filepath, process

flag internal-mapnik_c
  description: Let cabal build  mapnik_c
  default: True
  manual: True

flag examples
  description: Build example apps
  default: False
  manual: True

flag embed-fonts
  description: Embed defaults fonts in executable
  default: False
  manual: True

flag static
  description: Link executables statically
  default: False
  manual: True

library
  build-tools:         c2hs >= 0.25
  hs-source-dirs:      src
  exposed-modules:     Mapnik
  other-modules:       Mapnik.Internal
                     , Mapnik.InternalNew
  build-depends:       base                >= 4.7  && < 5
                     , bytestring          >= 0.10 && < 0.11
                     , either              >= 4.4  && < 4.5
                     , transformers        >= 0.4  && < 0.6
                     , inline-c-cpp        >= 0.2.1.0 && < 0.3
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(internal-mapnik_c)
    extra-libraries: mapnik stdc++
    include-dirs: mapnik_c
    c-sources: mapnik_c/mapnik_c_api.cpp
  else
    extra-libraries: mapnik_c mapnik stdc++

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec
                  , hspec-core >= 1.13
                  , hs-mapnik
                  , bytestring
                  , transformers

  hs-source-dirs:   spec
  main-is:          Spec.hs
  other-modules:    Mapnik.InternalSpec
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N
  if flag(static)
     ghc-options: -optl-static-libstdc++ -optl-static-libgcc -optl-static -pgml=g++


source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
