name:                hs-mapnik
version:             0.2.0.0
synopsis:            Haskel bindings for Mapnik
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2016-2017 Alberto Valverde González
category:            Bindings
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal, directory, filepath, process

flag embed-fonts
  description: Embed defaults fonts in executable
  default: False
  manual: True

flag static
  description: Link executables statically
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Mapnik
                     , Mapnik.Map
                     , Mapnik.Image
  other-modules:       Mapnik.Internal
  build-depends:       base                >= 4.7  && < 5
                     , bytestring          >= 0.10 && < 0.11
                     , inline-c-cpp        >= 0.2.1.0 && < 0.3
                     , inline-c            >= 0.6.0.5
                     , containers
                     , template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall
  extra-libraries:     mapnik stdc++
  c-sources:           cbits/destructors.cpp

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec
                  , hspec-core >= 1.13
                  , hs-mapnik
                  , bytestring
                  , transformers

  hs-source-dirs:   spec
  main-is:          Main.hs
  other-modules:    MapnikSpec
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N
  if flag(static)
     ghc-options: -optl-static-libstdc++ -optl-static-libgcc -optl-static -pgml=g++


source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
