name:                hs-mapnik-bindings
version:             0.2.0.0
synopsis:            Haskel bindings for Mapnik
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2016-2017 Alberto Valverde González
category:            Bindings
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal, directory, filepath, process

library
  hs-source-dirs:      src
  exposed-modules:     Mapnik.Bindings
                     , Mapnik.Bindings.Map
                     , Mapnik.Bindings.Color
                     , Mapnik.Bindings.Image
                     , Mapnik.Bindings.Layer
                     , Mapnik.Bindings.Style
                     , Mapnik.Bindings.Datasource
                     , Mapnik.Bindings.Projection
                     , Mapnik.Bindings.Registry
                     , Mapnik.Bindings.Rule
                     , Mapnik.Bindings.Symbolizer
                     , Mapnik.Bindings.Expression
                     , Mapnik.Bindings.Util
                     , Mapnik.Bindings.ToMapnik
                     , Mapnik.Bindings.FromMapnik
  build-depends:       base                >= 4.7  && < 5
                     , bytestring          >= 0.10 && < 0.11
                     , inline-c-cpp        >= 0.2.1.0 && < 0.3
                     , inline-c            >= 0.6.0.5
                     , text
                     , hs-mapnik
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall -optc-g
  extra-libraries:     mapnik stdc++
  c-sources:           cbits/destructors.cpp
  include-dirs:        cbits

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec
                  , hspec-core >= 1.13
                  , hs-mapnik
                  , hs-mapnik-bindings
                  , bytestring
                  , text

  hs-source-dirs:   spec
  main-is:          Main.hs
  other-modules:    Mapnik.BindingsSpec
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N -optc-g


source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
