name:                hs-mapnik
version:             0.1.0.0
synopsis:            Mapnik data model
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2017 Alberto Valverde González
build-type:          Simple
cabal-version:       >=1.10
data-files:          spec/proj4s.txt

library
  hs-source-dirs:      src
  exposed-modules:     Mapnik
                     , Mapnik.Map
                     , Mapnik.Lens
                     , Mapnik.Style
                     , Mapnik.Rule
                     , Mapnik.Layer
                     , Mapnik.Parameter
                     , Mapnik.Datasource
                     , Mapnik.Common
                     , Mapnik.Enums
                     , Mapnik.Symbolizer
                     , Mapnik.Symbolizer.Lens
                     , Mapnik.Symbolizer.Property
                     , Mapnik.QuickCheck
  other-modules:       Mapnik.Imports
                     , Mapnik.TH
                     , Paths_hs_mapnik
  build-depends:       base                >= 4.7  && < 5
                     , text
                     , aeson
                     , scientific
                     , unordered-containers
                     , lens
                     , vector
                     , data-default
                     , template-haskell
                     , QuickCheck
                     , quickcheck-instances
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec
                  , hspec-core >= 1.13
                  , hs-mapnik
                  , QuickCheck
                  , aeson

  hs-source-dirs:   spec
  main-is:          Main.hs
  other-modules:    MapnikSpec
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N


source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
