name:                hs-mapnik-purs
version:             0.1.0.0
synopsis:            Mapnik purescript data model generator
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2017 Alberto Valverde González
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mapnik.Purescript
  build-depends:       base                >= 4.7  && < 5
                     , purescript-bridge
                     , hs-mapnik
                     , lens
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fwarn-incomplete-patterns
    -fwarn-incomplete-uni-patterns

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec
                  , hspec-core >= 1.13
                  , hs-mapnik-purs

  hs-source-dirs:   spec
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N

executable hs-mapnik-purs
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  build-depends:
      base
    , hs-mapnik-purs
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
