name:                hs-mapnik-server
version:             0.1.0.0
synopsis:            OGC Map Server
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2017 Alberto Valverde González
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
      base
    , lens
    , protolude
    , mtl
    , transformers-base
    , http-types
    , time
    , wai
    , resource-pool
    , monad-control
    , monad-logger
    , vector
    , hs-mapnik-bindings
    , hs-mapnik-vectortile
    , protolude
    , wai-ogc
    , mime
    , scientific
  hs-source-dirs:      src
  exposed-modules:
    Mapnik.Server
  ghc-options:
    -Wall
    -fwarn-incomplete-patterns
    -fwarn-incomplete-uni-patterns
    -funbox-strict-fields

source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
