name:                hs-mapnik-setup
version:             0.1.0.0
synopsis:            Cabal utilities for linking against Mapnik
description:         Please see README.md
homepage:            https://github.com/albertov/hs-mapnik#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          allberto@toscat.net
copyright:           2017 Alberto Valverde González
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mapnik.Setup
  build-depends:       base                >= 4.7  && < 5
                     , Cabal
                     , process
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/albertov/hs-mapnik
